--- a/styles/style.css
+++ b/styles/style.css
@@ -104,7 +104,7 @@
 }
 
 .header__theme-menu-button:hover {
-  outline: solid 1.5px var(----accent-color-opacity);
+  outline: solid 1.5px var(--accent-color-opacity);
 }
 
 .header__theme-menu-button:focus-visible {
